logs/error.txt
pbraun@ubuntu2004-pab:~/_dev/typescript_learning_project_u12$ node server.ts
Debugger listening on ws://127.0.0.1:34549/809a8233-f360-4ec3-84ea-1921fcc71309
For help, see: https://nodejs.org/en/docs/inspector
Debugger attached.
/home/pbraun/_dev/typescript_learning_project_u12/server.ts:1
import * as http from 'http';
       ^

SyntaxError: Unexpected token *
    at Module._compile (internal/modules/cjs/loader.js:723:23)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:789:10)
    at Module.load (internal/modules/cjs/loader.js:653:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:593:12)
    at Function.Module._load (internal/modules/cjs/loader.js:585:3)
    at Function.Module.runMain (internal/modules/cjs/loader.js:831:12)
    at startup (internal/bootstrap/node.js:283:19)
    at bootstrapNodeJSCore (internal/bootstrap/node.js:623:3)
Waiting for the debugger to disconnect...
pbraun@ubuntu2004-pab:~/_dev/typescript_learning_project_u12$ 